--- a/Rsonify/DESCRIPTION
+++ b/Rsonify/DESCRIPTION
@@ -8,6 +8,6 @@ Authors@R: c(person("Stefan", "Siegert", role = c("aut", "cre"),
              person("Robin", "Williams", role = c("aut"))
             )
 License: GPL (>= 2)
-Imports:
-    tuneR (>= 1.3.1)
+Depends: R (>= 3.0.0), tuneR (>= 1.3.1)
+Imports: tuneR (>= 1.3.1)
 RoxygenNote: 5.0.1
