--- a/Rsonify/DESCRIPTION
+++ b/Rsonify/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: sonify
 Version: 0.0-1
-Date: 2017-01-31
+Date: 2017-02-01
 Title: Data Sonification - Turning Data into Sound
-Description: Sonification (or audification) is the process of representing data by sounds in the audible range. This package provides the R function `sonify` that transforms univariate data, sampled at regular or irregular intervals, into a continuous sound with time-varying frequency. The ups and downs in frequency represent the ups and downs in the data. Sonify provides a substitute for R's plot function to simplify data analysis for the visually impaired.
+Description: Sonification (or audification) is the process of representing data by sounds in the audible range. This package provides the R function sonify() that transforms univariate data, sampled at regular or irregular intervals, into a continuous sound with time-varying frequency. The ups and downs in frequency represent the ups and downs in the data. Sonify provides a substitute for R's plot function to simplify data analysis for the visually impaired.
 Maintainer: Stefan Siegert <s.siegert@exeter.ac.uk>
 Authors@R: c(person("Stefan", "Siegert", role = c("aut", "cre"),
                      email = "s.siegert@exeter.ac.uk"),
